openapi spl-token add
